--- a/_includes/navigation/footer.html
+++ b/_includes/navigation/footer.html
@@ -44,8 +44,9 @@
 	<div class="legal-line">
 		<p class="wrapper wrapper-large">
 			&copy; {{ site.time | date: '%Y' }} CloudCannon Ltd &bull;
-			<a href="https://cloudcannon.com/terms/">Terms</a> &amp;
-			<a href="https://cloudcannon.com/privacy/">Privacy</a>
+			<a href="https://cloudcannon.com/terms/">Terms</a> |
+			<a href="https://cloudcannon.com/privacy/">Privacy</a> |
+			<a href="https://cloudcannon.com/gdpr/">GDPR</a>
 		</p>
 	</div>
 </footer>
