--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,7 @@
 		<link rel="mask-icon" href="/assets/safari-pinned-tab.svg" color="#407afc">
 		<meta name="msapplication-config" content="/assets/browserconfig.xml" />
 		<meta name="theme-color" content="#407afc">
+		<meta property="og:image" content="/assets/images/social-media/opengraph.jpg" />
 
 		{% feed_meta %}
 
