Change input font size

--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -155,7 +155,7 @@ header.plain  {
 	background-color: #fff;
 	border: 1px solid $brand-color;
 	color: #fff;
-	font-size: 0.9rem;
+	font-size: 16px;
 	box-sizing: border-box;
 
 	&:focus,
