Fix broken link

--- a/_includes/navigation/footer.html
+++ b/_includes/navigation/footer.html
@@ -7,7 +7,7 @@
 			</div>
 			<ul>
 				<li><h4>CloudCannon</h4></li>
-				<li><a href="{{ site.main_url }}/features/">Features</a></li>
+				<li><a href="{{ site.main_url }}/features/files/">Features</a></li>
 				<li><a href="{{ site.main_url }}/pricing/">Pricing</a></li>
 				<li><a href="{{ site.main_url }}/blog/">Blog</a></li>
 				<li><a href="{{ site.main_url }}/about/">About</a></li>
