--- a/_includes/components/pricing/plan.html
+++ b/_includes/components/pricing/plan.html
@@ -3,8 +3,8 @@
 	<div class="plan-content">
 		<p class="price">
 			{% if include.plan.price %}
-				<span class="monthly">${{ include.plan.price }}/m</span>
-				<span class="annually">${{ include.plan.price | times: 10}}/y</span>
+				<span class="annually">${{ include.plan.price }}/m</span>
+				<span class="monthly">{% if include.plan.price_monthly %}${{ include.plan.price_monthly }}{% endif %}</span>
 			{% else %}
 				{{ include.plan.price_alt }}
 			{% endif %}
@@ -23,7 +23,7 @@
 			{% if include.plan.cta %}
 				<a class="button {% if plan.highlight %}brand{% else %}light{% endif %}" href="{{ plan.cta.link }}">{{ include.plan.cta.text }}</a>
 			{% else %}
-				<a class="button {% if plan.highlight %}brand{% else %}light{% endif %}" href="https://app.cloudcannon.com/editor">Start Now</a>
+				<a class="button {% if plan.highlight %}brand{% else %}light{% endif %}" href="https://app.cloudcannon.com/editor">Start A Free Trial</a>
 			{% endif %}
 		</div>
 	</div>
