Add status link

--- a/_includes/navigation/footer.html
+++ b/_includes/navigation/footer.html
@@ -19,6 +19,7 @@
 				<li><a href="https://docs.cloudcannon.com/">Documentation</a></li>
 				<li><a href="{{ site.main_url }}/experts/">Experts</a></li>
 				<li><a href="https://brand.cloudcannon.com/">Brand</a></li>
+				<li><a href="https://status.cloudcannon.com/">Status</a></li>
 			</ul>
 			<ul>
 				<li><h4>App</h4></li>
