Mobile nav updates

--- a/_includes/navigation/top.html
+++ b/_includes/navigation/top.html
@@ -1,7 +1,11 @@
-<div class="nav-bar wrapper wrapper-large">
+<div id="mobile-container" class="nav-bar wrapper wrapper-large">
 	<a id="open-nav" href="#">{% include svgs/other-icon.html icon="menu" %}</a>
 	{% include navigation/logo.html %}
 	{% include navigation/search.html %}
 	{% include navigation/main.html %}
 	{% include navigation/right.html %}
+	{% include navigation/mobile-nav.html %}
 </div>
+{% if site.features %}
+	{% include navigation/feature-nav-bar.html %}
+{% endif %}
