--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -91,6 +91,8 @@ nav.siblings {
 }
 
 .logo {
+	position: relative;
+	z-index: 2;
 	line-height: 0;
 	text-align: left;
 
@@ -183,8 +185,7 @@ header.plain  {
 	}
 
 	.main,
-	.right,
-	.search {
+	.right {
 		display: none;
 		text-align: right;
 
@@ -380,3 +381,188 @@ body.minimal-navigation {
 		}
 	}
 }
+
+
+
+
+
+
+
+.mobile-nav {
+	position: absolute;
+	top: 20px;
+	left: 0;
+	display: none;
+	justify-content: flex-end;
+	width: 100%;
+	padding: 8px;
+	padding-right: 15px;
+	box-sizing: border-box;
+
+
+	.search-button, .mobile-menu-button {
+		position: relative;
+		display: flex;
+		margin: 0px 5px;
+		z-index: 11;
+		cursor: pointer;
+	}
+
+	.mobile-menu-button {
+		display: flex;
+		cursor: pointer;
+	}
+}
+
+.mobile-overflow {
+	overflow: hidden;
+}
+
+.mobile-menu {
+	position: absolute;
+	z-index: 10;
+	top: 79px;
+	left: 0;
+	display: none;
+	width: 100%;
+	height: 100vh;
+	flex-flow: column nowrap;
+	justify-content: flex-start;
+	align-content: flex-start;
+	align-items: stretch;
+	overflow: scroll;
+	background: #407afc linear-gradient(45deg, rgba(0, 0, 0, 0), #429cfc);
+	user-select: none;
+	-moz-user-select: none;
+	box-sizing: border-box;
+
+	.nav-group {
+		width: 100%;
+
+		.group-heading {
+			padding: 10px 15px;
+			background: rgba(0, 0, 0, 0.05);
+			/* box-shadow: inset 0px 10px 10px #297DE8; */
+			box-shadow: inset 0px 10px 10px rgba(0,0,0, 0.08);
+			
+
+			h4 {
+				margin: 0px;
+				text-align: left;
+			}
+		}
+
+		ul {
+			margin: 0;
+			padding: 0;
+			list-style: none;
+			text-align: left;
+			border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+
+			li {
+				display: flex;
+				font-size: 1rem;
+				background: rgba(255, 255, 255, 0.05);
+				border-top: 1px solid rgba(255, 255, 255, 0.2);
+
+				a {
+					padding: 5px 15px;
+					width: 100%;
+					height: 100%;
+					color: rgba(255,255,255, 0.75);
+					transition: all ease .25s;
+				}
+
+				a:hover {
+					color: rgba(255,255,255, 1);
+					background: rgba(255,255,255, 0.1);
+					transition: all ease .25s;
+				}
+			}
+
+			li.active {
+				background: rgba(255, 255, 255, 0.03) linear-gradient(45deg, rgba(255, 255, 255, 0.2), rgba(0, 0, 0, 0));
+			}
+		}
+	}
+
+	.nav-filler {
+		height: 86px;
+		box-shadow: inset 0px 10px 10px rgba(0,0,0, 0.08);
+		margin-top: 0px;
+		box-sizing: border-box;
+		padding: 76px;
+	}
+}
+
+
+
+.header-search {
+	margin-right: 15px;
+
+	@media screen and (max-width: 600px) {
+		width: 100%;
+
+		input {
+			position: relative;
+			z-index: -1;
+			width: 100%;
+			opacity: 0;
+		}
+	}
+}
+
+@media screen and (max-width: 929px) {
+	.landing .nav-bar {
+		background: rgba(0, 0, 0, 0.1);
+	}
+
+	nav.siblings + header {
+		padding-top: 0px;
+	}
+
+	nav.siblings, #open-nav {
+		display: none;
+	}
+
+	.search {
+		display: none;
+	}
+
+	.mobile-nav {
+		display: flex;
+	}
+
+
+
+
+	.mobile-nav input#search-input {
+		margin-right: 15px;
+		margin: -5px 0px 5px 10px;
+		opacity: 0;
+		transition: all ease .2s;
+	}
+
+	.mobile-nav input#search-input.open {
+		z-index: 4;
+		margin-top: -5px;
+		padding: 5px 5px 5px 30px;
+		opacity: 1;
+		transition: all ease .2s;
+	}
+
+	.mobile-menu.open {
+		display: block;
+	}
+
+	.nav-bar.wrapper.wrapper-large.open {
+		box-shadow: inset 0px -10px 10px rgba(0,0,0, 0.04);
+	}
+}
+
+
+
+
+
+
+
