--- a/_sass/screen.scss
+++ b/_sass/screen.scss
@@ -2,6 +2,7 @@
 @import "elements";
 @import "typography";
 @import "navigation";
+@import "doc-nav";
 @import "landing-page";
 @import "form";
 @import "layout";
