--- a/_includes/svgs/other-icon.html
+++ b/_includes/svgs/other-icon.html
@@ -6,7 +6,7 @@
 		</svg>
 	{% when "menu" %}
 		<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-			<path d="M3 18h18v-2h-18v2zm0-5h18v-2h-18v2zm0-7v2h18v-2h-18z" fill="#eee"/>
+			<path d="M3 18h18v-2h-18v2zm0-5h18v-2h-18v2zm0-7v2h18v-2h-18z"/>
 		</svg>
 
 {% endcase %}
