--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,6 +7,12 @@ header_class: plain
 	{% include navigation/top.html %}
 </header>
 
+{% if include.features_nav %}
+	{% include navigation/feature-nav-bar.html %}
+{% endif %}
+{% if include.docs_nav %}
+	{% include navigation/docs-nav-bar.html %}
+{% endif %}
 {{ content }}
 
 {% include components/cta/main.html text="Join thousands of developers building sites on CloudCannon today" button="Get started free" %}
