--- a/_sass/_docs.scss
+++ b/_sass/_docs.scss
@@ -12,7 +12,14 @@
 
 		.docs-nav-list {
 			padding: 0;
+			padding-top: 35px;
 			margin: 0;
+		}
+	}
+
+	@media (max-width: 800px) {
+		.docs-nav.full-navigation {
+			display: none;
 		}
 	}
 
@@ -21,6 +28,10 @@
 		flex: 3 1 500px;
 		min-width: 0;
 
+		@media (max-width: 800px) {
+			padding-top: 50px;
+		}
+
 		.content {
 			max-width: 800px;
 			margin: 0 auto 1.75em auto;
@@ -28,10 +39,10 @@
 	}
 
 	@media (min-width: 800px) {
-		padding: 40px 0;
+		
 
 		.docs-main {
-			padding: 0 20px;
+			padding: 40px 20px;
 		}
 
 		.docs-nav {
