updated brand colour

--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -414,7 +414,7 @@ body.minimal-navigation {
 
 .mobile-nav.light {
 	.mobile-menu-button svg {
-		fill: #407afc;
+		fill: #034ad8;
 	}
 }
 
@@ -435,7 +435,7 @@ body.minimal-navigation {
 	align-content: flex-start;
 	align-items: stretch;
 	overflow: scroll;
-	background: #407afc linear-gradient(45deg, rgba(0, 0, 0, 0), #429cfc);
+	background: #034ad8 linear-gradient(45deg, rgba(0, 0, 0, 0), #429cfc);
 	user-select: none;
 	-moz-user-select: none;
 	box-sizing: border-box;
@@ -517,7 +517,7 @@ body.minimal-navigation {
 			}
 
 			a:hover {
-				color: #407afc;
+				color: #034ad8;
 			}
 		}
 	}
