--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,5 +1,5 @@
 // Colors
-$brand-color: #407afc;
+$brand-color: #034ad8;
 $light-brand-color: #429cfc;
 $footer-color: #949baa;
 $cards-background-color: #f6f7fc;
@@ -12,7 +12,7 @@ $placeholder-colour: #b4b8c1;
 $plain-border-color: #e7e7e7;
 
 $white: #fff;
-$brand-color: #407afc;
+$brand-color: #034ad8;
 $brand-color-background: mix($brand-color, $white, 10%);
 
 $success-color: #39b75b;
