--- a/_sass/doc-nav.scss
+++ b/_sass/doc-nav.scss
@@ -249,7 +249,7 @@ body.fixed-position:after {
 			text-align: center;
 			font-size: 0.7rem;
 			line-height: 1rem;
-			color: #407afc;
+			color: #034ad8;
 
 			.arrow {
 				padding-right: 2px;
