--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,9 +12,9 @@
 		<link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png">
 		<link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16x16.png">
 		<link rel="manifest" href="/assets/manifest.json">
-		<link rel="mask-icon" href="/assets/safari-pinned-tab.svg" color="#407afc">
+		<link rel="mask-icon" href="/assets/safari-pinned-tab.svg" color="#034ad8">
 		<meta name="msapplication-config" content="/assets/browserconfig.xml" />
-		<meta name="theme-color" content="#407afc">
+		<meta name="theme-color" content="#034ad8">
 		<script src="/assets/js/bodyScrollLock.js"></script>
 
 		{% feed_meta %}
