removed brand gradient

--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -109,7 +109,7 @@ nav.siblings {
 
 header.landing,
 header.short {
-	background: $brand-color linear-gradient(45deg, rgba(0, 0, 0, 0), $light-brand-color);
+	background: $brand-color;
 	text-align: center;
 
 	&,
