--- a/_includes/navigation/footer.html
+++ b/_includes/navigation/footer.html
@@ -12,17 +12,18 @@
 			</div>
 			<ul>
 				<li><h4>CloudCannon</h4></li>
-				<li><a href="{{ site.main_url }}/features/files/">Features</a></li>
+				<li><a href="{{ site.main_url }}/build/">Build</a></li>
+				<li><a href="{{ site.main_url }}/cms/">CMS</a></li>
+				<li><a href="{{ site.main_url }}/hosting/">Hosting</a></li>
 				<li><a href="{{ site.main_url }}/pricing/">Pricing</a></li>
 				<li><a href="{{ site.main_url }}/blog/">Blog</a></li>
-				<li><a href="{{ site.main_url }}/about/">About</a></li>
+				<li><a href="{{ site.main_url }}/our-people/">Our People</a></li>
 				<li><a href="{{ site.main_url }}/careers/">Careers</a></li>
 			</ul>
 			<ul>
 				<li><h4>Resources</h4></li>
 				<li><a href="https://learn.cloudcannon.com/">Guides</a></li>
 				<li><a href="https://docs.cloudcannon.com/">Documentation</a></li>
-				<li><a href="{{ site.main_url }}/experts/">Experts</a></li>
 				<li><a href="https://brand.cloudcannon.com/">Brand</a></li>
 				<li><a href="https://status.cloudcannon.com/">Status</a></li>
 			</ul>
