--- a/_includes/navigation/footer.html
+++ b/_includes/navigation/footer.html
@@ -12,9 +12,10 @@
 			</div>
 			<ul>
 				<li><h4>CloudCannon</h4></li>
+				<li><a href="{{ site.main_url }}/sync/">Sync</a></li>
 				<li><a href="{{ site.main_url }}/build/">Build</a></li>
-				<li><a href="{{ site.main_url }}/cms/">CMS</a></li>
-				<li><a href="{{ site.main_url }}/hosting/">Hosting</a></li>
+				<li><a href="{{ site.main_url }}/edit/">Edit</a></li>
+				<li><a href="{{ site.main_url }}/host/">Host</a></li>
 				<li><a href="{{ site.main_url }}/pricing/">Pricing</a></li>
 				<li><a href="{{ site.main_url }}/blog/">Blog</a></li>
 				<li><a href="{{ site.main_url }}/our-people/">Our People</a></li>
@@ -23,7 +24,7 @@
 			<ul>
 				<li><h4>Resources</h4></li>
 				<li><a href="https://learn.cloudcannon.com/">Guides</a></li>
-				<li><a href="https://docs.cloudcannon.com/">Documentation</a></li>
+				<li><a href="https://cloudcannon.com/documentation/">Documentation</a></li>
 				<li><a href="https://brand.cloudcannon.com/">Brand</a></li>
 				<li><a href="https://status.cloudcannon.com/">Status</a></li>
 			</ul>
